poitioning assign-2 done

--- a/block-BHaabg/index.html
+++ b/block-BHaabg/index.html
@@ -13,3 +13,71 @@
 6. After the gallery section footer will come.
 
 7. Take a circular button at the right bottom corner of the page and keep its position fixed. The button should always take to the top of the page once clicked. -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Positioning assign-2</title>
+    <link rel="stylesheet" href="./assets/stylesheet/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+</head>
+<body id="top">
+    <div class="container">
+        <header>
+            <div>
+                <img class="logo" src="./assets/media/alt campus logo.png" alt="">
+            </div>
+            <nav>
+                <a href="#">ABOUT</a>
+                <a href="#">PROGRAM</a>
+                <a href="#">HELP</a>
+            </nav>
+        </header>
+
+        <main class="main-container">
+            <section class="section-1">
+                <article class="article-1">
+                    <h1>This is the heading of the article</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla repellat perferendis ipsum doloremque eveniet aut, vero animi vel necessitatibus reiciendis, minus laborum blanditiis autem, temporibus dolore doloribus voluptatum rerum quibusdam.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam tenetur asperiores, dignissimos molestias quae maiores, corporis rerum, accusamus voluptate magnam architecto odit reiciendis in harum facere deserunt ipsum natus nam.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed sequi nihil officiis qui, adipisci sapiente voluptas a impedit libero, exercitationem, alias non nulla voluptate reprehenderit odit quae rerum. Dolorum, cum?</p>
+
+                </article>
+
+                <article class="article-2">
+                    <img class="system-image" src="./assets/media/system image.jpg" alt="">
+
+                </article>
+            </section>
+            <section class="gallery-section">
+                <article class="article-gal-1">
+                    <img src="./assets/media/himalaya-1.jpeg" alt="">
+                    <img src="./assets/media/himalaya-2.jpg" alt="">
+                    <img src="./assets/media/himalaya-3.jpg" alt="">
+
+                </article>
+                <article class="article-gal-2">
+                    <img src="./assets/media/kerala-1.webp" alt="">
+                    <img src="./assets/media/kerala-2.webp" alt="">
+                    <img src="./assets/media/kerala-3.jpg" alt="">
+h
+                </article>
+
+            </section>
+        </main>
+
+        <footer>
+            <p>&copy; Alt Campus Inc.</p>
+        </footer>
+        <div  class="btn-div">
+            <button id="btn"  class="btn"><a href="#top">Click me</a></button>
+
+        </div>
+
+    </div>
+</body>
+</html>
